fix nav icon overflow and add missing assets

--- a/app/_scss/sections/_about.scss
+++ b/app/_scss/sections/_about.scss
@@ -3,7 +3,7 @@
   padding-top: 60px;
   padding-bottom: 100px;
 
-  background-image: url('/assets/bio-bg.jpg');
+  //background-image: url('/assets/bio-bg.jpg');
   @include parallax-background();
   background-position: bottom center;
 
