--- a/app/_scss/sections/_header.scss
+++ b/app/_scss/sections/_header.scss
@@ -94,7 +94,7 @@
   @media screen and (max-width: $width-md) {
     #logo {
       img {
-        margin-right: 100%;
+        //margin-right: 100%;
         padding: $spacing-xs;
       }
     }
